--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,84 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+// Combine class names conditionally
+/**
+ * Combines class names, filtering out falsy values.
+ */
+export function cn(...classes: (string | undefined | false | null)[]) {
+  return classes.filter(Boolean).join(" ")
+}
+
+/**
+ * Delay for async/await.
+ */
+export function delay(ms: number) {
+  return new Promise(resolve => setTimeout(resolve, ms))
+}
+
+/**
+ * Get a random integer between min and max (inclusive).
+ */
+export function randomInt(min: number, max: number) {
+  return Math.floor(Math.random() * (max - min + 1)) + min
+}
+
+/**
+ * Shuffle an array using Fisher-Yates algorithm.
+ */
+export function shuffle<T>(arr: T[]): T[] {
+  const a = [...arr]
+  for (let i = a.length - 1; i > 0; i--) {
+    const j = Math.floor(Math.random() * (i + 1))
+    ;[a[i], a[j]] = [a[j], a[i]]
+  }
+  return a
+}
+
+/**
+ * Capitalize the first letter of a string.
+ */
+export function capitalize(str: string) {
+  if (!str) return ""
+  return str.charAt(0).toUpperCase() + str.slice(1)
+}
+
+/**
+ * Format a number as a percentage string.
+ */
+export function formatPercent(value: number, decimals = 0) {
+  return `${(value * 100).toFixed(decimals)}%`
+}
+
+/**
+ * Clamp a number between min and max.
+ */
+export function clamp(num: number, min: number, max: number) {
+  return Math.min(Math.max(num, min), max)
+}
+
+/**
+ * Generate a random hex color.
+ */
+export function randomHexColor() {
+  return `#${Math.floor(Math.random() * 0xffffff).toString(16).padStart(6, "0")}`
+}
+
+/**
+ * Debounce a function.
+ */
+export function debounce<T extends (...args: any[]) => void>(fn: T, delay: number) {
+  let timeout: ReturnType<typeof setTimeout>
+  return (...args: Parameters<T>) => {
+    clearTimeout(timeout)
+    timeout = setTimeout(() => fn(...args), delay)
+  }
+}
+
+/**
+ * Generate an array of numbers from start to end (inclusive).
+ */
+export function range(start: number, end: number): number[] {
+  return Array.from({ length: end - start + 1 }, (_, i) => start + i)
+}
